apps/monitoring/kube-prometheus-stack/overlays/production/alertmanager-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alertmanager.apps.lab.mxe11.nl
spec:
  parentRefs:
    - name: cilium-secure-gateway
      namespace: cilium-gateway-system
  hostnames: [alertmanager.apps.lab.mxe11.nl]
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
