apps/monitoring/kube-prometheus-stack/overlays/production/grafana-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: cilium-secure-gateway
      namespace: cilium-gateway-system
      sectionName: https
  hostnames: [grafana.apps.lab.mxe11.nl]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
          weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  parentRefs:
    - name: cilium-web-gateway
      namespace: cilium-gateway-system
  hostnames: [grafana.apps.lab.mxe11.nl]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
