apps/monitoring/kube-prometheus-stack/overlays/production/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.apps.lab.mxe11.nl`)
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          port: 80
          scheme: http
  tls:
    secretName: grafana-tls-cert # pragma: allowlist secret
