apps/monitoring/kube-prometheus-stack/overlays/production/prometheus-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.apps.lab.mxe11.nl
spec:
  parentRefs:
    - name: cilium-secure-gateway
      namespace: cilium-gateway-system
  hostnames: [prometheus.apps.lab.mxe11.nl]
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
